--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,9 +73,6 @@ html {
 
 footer {
   text-align: center;
-  position: absolute;
-  left: 0;
-  bottom: 0;
   width: 100%;
   overflow: hidden;
   height: 5em;
